--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "author": "Ihor Hudkov",
   "devDependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.2",
     "@types/chrome": "^0.0.193",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
