--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -13,7 +13,7 @@
     "default_title": "Weather Extension",
     "default_icon": "icon.png"
   },
-  "permissions": ["storage", "tabs"],
+  "permissions": ["storage", "tabs", "contextMenus"],
   "options_page": "options.html",
   "background": {
     "service_worker": "background.js"
